update documentation for anki field editor (fixes #46)

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -204,9 +204,9 @@
                     <div id="anki-format">
                         <p class="help-block">
                             Specify the information you would like included in your flashcards in the field editor below.
-                            Please be aware that Anki requires the first field in the model to be unique. It is highly recommended
+                            As Anki requires the first field in the model to be unique, it is recommended
                             that you set it to <code>{expression}</code> for term flashcards and <code>{character}</code> for
-                            Kanji flashcards.
+                            Kanji flashcards. You can use multiple markers per field by typing them in directly.
                         </p>
 
                         <ul class="nav nav-tabs">
