--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -41,6 +41,10 @@
                     <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
                 </div>
 
+                <div class="checkbox options-advanced">
+                    <label><input type="checkbox" id="show-debug-info"> Show debug information</label>
+                </div>
+
                 <div class="form-group">
                     <label for="audio-playback-source">Audio playback source</label>
                     <select class="form-control" id="audio-playback-source">
