--- a/tmpl/terms.html
+++ b/tmpl/terms.html
@@ -59,13 +59,17 @@
         {{> definition}}
         {{/if}}
     </div>
+
+    {{#if debug}}
+    <pre>{{#dumpObject}}{{{.}}}{{/dumpObject}}</pre>
+    {{/if}}
 </div>
 {{/inline}}
 
 {{#if definitions}}
 {{#each definitions}}
 {{#unless @first}}<hr>{{/unless}}
-{{> term grouped=../grouped addable=../addable playback=../playback}}
+{{> term debug=../debug grouped=../grouped addable=../addable playback=../playback}}
 {{/each}}
 {{else}}
 <p>No results found.</p>
