--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -50,7 +50,7 @@
                     <select class="form-control" id="audio-playback-source">
                         <option value="disabled">Disabled</option>
                         <option value="jpod101">JapanesePod101</option>
-                        <option value="jpod101-alternate">JapanesePod101 (Alternate)</option>
+                        <option value="jpod101-alternate">JapanesePod101 (alternate)</option>
                     </select>
                 </div>
 
