options debugging code

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -8,6 +8,7 @@
         <style>
             #anki-spinner, #anki-general, #anki-error,
             #dict-spinner, #dict-error, #dict-warning, #dict-purge-progress, #dict-import-progress,
+            #debug,
             .options-advanced {
                 display: none;
             }
@@ -272,6 +273,8 @@
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="/bg/img/paypal.gif" alt></a>
                     </p>
                 </div>
+
+                <pre id="debug"></pre>
             </div>
 
             <div class="pull-right">
