make soft katakana search be implicit

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -39,10 +39,6 @@
                 </div>
 
                 <div class="checkbox options-advanced">
-                    <label><input type="checkbox" id="soft-katakana-search"> Soft Katakana search</label>
-                </div>
-
-                <div class="checkbox options-advanced">
                     <label><input type="checkbox" id="show-debug-info"> Show debug information</label>
                 </div>
 
@@ -66,7 +62,7 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label>Popup size (width x height, in pixels)</label>
+                    <label>Popup size (width &times; height, in pixels)</label>
                     <div class="row">
                         <div class="col-xs-6"><input type="number" min="1" id="popup-width" class="form-control"></div>
                         <div class="col-xs-6"><input type="number" min="1" id="popup-height" class="form-control"></div>
