update options labels

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -99,12 +99,12 @@
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="scan-delay">Scan delay</label>
+                    <label for="scan-delay">Scan delay (in milliseconds)</label>
                     <input type="number" min="1" id="scan-delay" class="form-control">
                 </div>
 
                 <div class="form-group options-advanced">
-                    <label for="scan-length">Scan length</label>
+                    <label for="scan-length">Scan length (in characters)</label>
                     <input type="number" min="1" id="scan-length" class="form-control">
                 </div>
             </div>
@@ -193,7 +193,7 @@
                     </div>
 
                     <div class="form-group options-advanced">
-                        <label for="sentence-detection-extent">Sentence detection extent</label>
+                        <label for="sentence-detection-extent">Sentence detection extent (in characters)</label>
                         <input type="number" min="1" id="sentence-detection-extent" class="form-control">
                     </div>
 
