update wording on options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -250,9 +250,12 @@
                     <h3>Support Development</h3>
 
                     <p class="help-block">
-                        If you find Yomichan useful, please consider making a small donation as a way to show your appreciation for the countless hours
-                        that I have devoted to this extension. Seeing that people care about my work is great motivation for continuing to
-                        improve Yomichan!
+                        Yomichan is provided to you <em>completely free</em> of charge. Unlike numerous other "free" services, you are not
+                        shown ads, pestered with "offers", or have your browser usage information analyzed and sold to third parties.
+                    </p>
+                    <p class="help-block">
+                        If you find Yomichan useful, please consider making a small donation as a way to show your appreciation for the
+                        countless hours that I have devoted to this extension.
                     </p>
                     <p>
                         <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="/bg/img/paypal.gif" alt></a>
