updating options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -118,17 +118,19 @@
                 </div>
 
                 <p class="help-block">
-                    Yomichan can utilize both bundled and custom (see the <a href="https://foosoft.net/projects/yomichan-import">Yomichan Import</a>
-                    page for details) dictionaries. You can disable dictionaries that you no longer wish to use, or you can simply
-                    <a href="#" id="dict-purge">purge the database</a> to delete everything. Please make sure to wait for import
-                    and delete operations to complete before closing this page.
+                    Yomichan can import and use a variety of dictionary formats. Unneeded dictionaries can be disabled,
+                    or you can simply <a href="#" id="dict-purge">purge the database</a> to delete everything.
+                </p>
+                <p class="help-block">
+                    Please visit the <a href="https://foosoft.net/projects/yomichan">Yomichan</a> homepage to download free
+                    dictionaries that you can use with this extension.
                 </p>
 
                 <div id="dict-purge-progress" class="text-danger">Dictionary data is being purged, please be patient...</div>
 
                 <div class="alert alert-warning" id="dict-warning">
                     <strong>Warning:</strong>
-                    <span>No dictionaries found, use the importer below to install packaged and external dictionaries</span>
+                    <span>no dictionaries found; please use the importer below to install packaged dictionaries</span>
                 </div>
 
                 <div class="alert alert-danger" id="dict-error">
