update wording on options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -159,9 +159,9 @@
                 </div>
 
                 <p class="help-block">
-                    Yomichan features automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
-                    designed to help you retain knowledge. This functionality requires prior installation of the
-                    <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin for Anki.
+                    Yomichan supports automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
+                    designed to help you remember. This feature requires installation of the
+                    <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin.
                 </p>
 
                 <div class="alert alert-danger" id="anki-error">
