fix result page for no items found

--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="/mixed/css/frame.css">
         <style type="text/css">
-            .entry {
+            .entry, .note {
                 padding-left: 10px;
                 padding-right: 10px;
             }
