--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -63,5 +63,5 @@
 {{> kanji debug=../debug addable=../addable source=../source root=../root}}
 {{/each}}
 {{else}}
-<p>No results found.</p>
+<p class="note">No results found.</p>
 {{/if}}
