--- a/tmpl/terms.html
+++ b/tmpl/terms.html
@@ -72,5 +72,5 @@
 {{> term debug=../debug grouped=../grouped addable=../addable playback=../playback}}
 {{/each}}
 {{else}}
-<p>No results found.</p>
+<p class="note">No results found.</p>
 {{/if}}
