open links in new windows from options page

--- a/ext/bg/options.html
+++ b/ext/bg/options.html
@@ -122,7 +122,7 @@
                     or you can simply <a href="#" id="dict-purge">purge the database</a> to delete everything.
                 </p>
                 <p class="help-block">
-                    Please visit the <a href="https://foosoft.net/projects/yomichan">Yomichan</a> homepage to download free
+                    Please visit the <a href="https://foosoft.net/projects/yomichan" target="_blank">Yomichan</a> homepage to download free
                     dictionaries that you can use with this extension.
                 </p>
 
@@ -159,9 +159,9 @@
                 </div>
 
                 <p class="help-block">
-                    Yomichan supports automatic flashcard creation for <a href="http://ankisrs.net/">Anki</a>, a free application
+                    Yomichan supports automatic flashcard creation for <a href="http://ankisrs.net/" target="_blank">Anki</a>, a free application
                     designed to help you remember. This feature requires installation of the
-                    <a href="https://foosoft.net/projects/anki-connect/">AnkiConnect</a> plugin.
+                    <a href="https://foosoft.net/projects/anki-connect/" target="_blank">AnkiConnect</a> plugin.
                 </p>
 
                 <div class="alert alert-danger" id="anki-error">
@@ -260,7 +260,7 @@
                         countless hours that I have devoted to this extension.
                     </p>
                     <p>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN"><img src="/bg/img/paypal.gif" alt></a>
+                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN" target="_blank"><img src="/bg/img/paypal.gif" alt></a>
                     </p>
                 </div>
 
@@ -268,7 +268,7 @@
             </div>
 
             <div class="pull-right">
-                <small><a href="https://foosoft.net/projects/yomichan/">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
+                <small><a href="https://foosoft.net/projects/yomichan/" target="_blank">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
             </div>
         </div>
 
