--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -31,6 +31,8 @@
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/popup.js"></script>
     </body>
