--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -34,6 +34,8 @@
 
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
