--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -11,6 +11,8 @@
         <script src="/mixed/js/audio.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/anki-connect.js"></script>
         <script src="/bg/js/anki-null.js"></script>
