--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -277,6 +277,8 @@
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/settings.js"></script>
     </body>
