--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -32,6 +32,7 @@
         <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/request.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/popup.js"></script>
