--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -35,6 +35,7 @@
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/bg/js/dictionary.js"></script>
+        <script src="/mixed/js/request.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
