--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -280,6 +280,7 @@
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/mixed/js/japanese.js"></script>
+        <script src="/mixed/js/request.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/settings.js"></script>
     </body>
