--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -10,7 +10,7 @@
         <script src="/mixed/lib/jszip.min.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/bg/js/templates.js"></script>
-        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/instance.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/mixed/js/japanese.js"></script>
