--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -30,7 +30,7 @@
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
-        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/instance.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/mixed/js/request.js"></script>
         <script src="/mixed/js/japanese.js"></script>
