--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -33,7 +33,7 @@
         </div>
 
         <script src="/mixed/lib/jquery.min.js"></script>
-        <script src="/bg/js/util.js"></script>
+        <script src="/bg/js/instance.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/mixed/js/request.js"></script>
         <script src="/mixed/js/japanese.js"></script>
