--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -32,9 +32,10 @@
 
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
-        <script src="/fg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
+        <script src="/fg/js/dictionary.js"></script>
+        <script src="/fg/js/background.js"></script>
         <script src="/fg/js/display-frame.js"></script>
     </body>
 </html>
