--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -21,6 +21,6 @@
         <script src="/bg/js/database.js"></script>
         <script src="/bg/js/deinflector.js"></script>
         <script src="/bg/js/translator.js"></script>
-        <script src="/bg/js/yomichan.js"></script>
+        <script src="/bg/js/backend.js"></script>
     </body>
 </html>
