--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -35,7 +35,7 @@
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/fg/js/dictionary.js"></script>
-        <script src="/fg/js/background.js"></script>
+        <script src="/fg/js/api.js"></script>
         <script src="/fg/js/display-frame.js"></script>
     </body>
 </html>
