--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -4,23 +4,25 @@
         <meta charset="UTF-8">
     </head>
     <body>
-        <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/dexie.min.js"></script>
-        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/jszip.min.js"></script>
-        <script src="/mixed/js/audio.js"></script>
-        <script src="/bg/js/templates.js"></script>
-        <script src="/bg/js/instance.js"></script>
-        <script src="/bg/js/handlebars.js"></script>
-        <script src="/bg/js/dictionary.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
-        <script src="/mixed/js/request.js"></script>
-        <script src="/bg/js/options.js"></script>
+        <script src="/mixed/lib/wanakana.min.js"></script>
+
         <script src="/bg/js/anki-connect.js"></script>
         <script src="/bg/js/anki-null.js"></script>
+        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/database.js"></script>
         <script src="/bg/js/deinflector.js"></script>
+        <script src="/bg/js/dictionary.js"></script>
+        <script src="/bg/js/handlebars.js"></script>
+        <script src="/bg/js/options.js"></script>
+        <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/translator.js"></script>
+        <script src="/mixed/js/audio.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
+        <script src="/mixed/js/request.js"></script>
+
         <script src="/bg/js/backend.js"></script>
     </body>
 </html>
