--- a/ext/bg/popup.html
+++ b/ext/bg/popup.html
@@ -27,13 +27,16 @@
                 <button type="button" id="open-help" title="Help" class="btn btn-default btn-xs glyphicon glyphicon-question-sign"></button>
             </div>
         </p>
+
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
+
+        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/dictionary.js"></script>
-        <script src="/mixed/js/request.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/popup.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
+        <script src="/mixed/js/request.js"></script>
     </body>
 </html>
