--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -275,12 +275,15 @@
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
-        <script src="/bg/js/templates.js"></script>
-        <script src="/bg/js/handlebars.js"></script>
+
+        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/dictionary.js"></script>
+        <script src="/bg/js/handlebars.js"></script>
+        <script src="/bg/js/options.js"></script>
+        <script src="/bg/js/templates.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/request.js"></script>
-        <script src="/bg/js/options.js"></script>
+
         <script src="/bg/js/settings.js"></script>
     </body>
 </html>
