--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -32,13 +32,19 @@
             <div id="content"></div>
         </div>
 
+        <script src="/mixed/lib/handlebars.min.js"></script>
         <script src="/mixed/lib/jquery.min.js"></script>
+        <script src="/mixed/lib/wanakana.min.js"></script>
+
+        <script src="/bg/js/api.js"></script>
         <script src="/bg/js/dictionary.js"></script>
-        <script src="/mixed/js/request.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
+        <script src="/bg/js/handlebars.js"></script>
+        <script src="/bg/js/templates.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
-        <script src="/mixed/lib/wanakana.min.js"></script>
+        <script src="/mixed/js/japanese.js"></script>
+        <script src="/mixed/js/request.js"></script>
+
         <script src="/bg/js/display-window.js"></script>
     </body>
 </html>
