--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -283,6 +283,7 @@
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/templates.js"></script>
+        <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/request.js"></script>
 
