--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -32,6 +32,7 @@
 
         <script src="/fg/js/api.js"></script>
         <script src="/fg/js/dictionary.js"></script>
+        <script src="/fg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/lib/jquery.min.js"></script>
