--- a/ext/fg/frame.html
+++ b/ext/fg/frame.html
@@ -18,9 +18,9 @@
             <img src="/mixed/img/spinner.gif">
         </div>
 
-        <div id="content"></div>
+        <div id="definitions"></div>
 
-        <div id="orphan">
+        <div id="error-orphaned">
             <div class="container-fluid">
                 <h1>Yomichan Updated!</h1>
                 <p>
