--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -40,10 +40,10 @@
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
+        <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
-        <script src="/mixed/js/request.js"></script>
 
         <script src="/bg/js/display-window.js"></script>
     </body>
