--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -9,8 +9,7 @@
         <script src="/mixed/lib/jszip.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
 
-        <script src="/bg/js/anki-connect.js"></script>
-        <script src="/bg/js/anki-null.js"></script>
+        <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/database.js"></script>
         <script src="/bg/js/deinflector.js"></script>
@@ -19,7 +18,6 @@
         <script src="/bg/js/options.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/translator.js"></script>
-        <script src="/bg/js/util.js"></script>
         <script src="/bg/js/util.js"></script>
         <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/japanese.js"></script>
