--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -38,6 +38,6 @@
         <script src="/mixed/js/japanese.js"></script>
         <script src="/mixed/js/request.js"></script>
 
-        <script src="/bg/js/popup.js"></script>
+        <script src="/bg/js/context.js"></script>
     </body>
 </html>
