--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -5,7 +5,7 @@
         <title>Yomichan Search</title>
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" type="text/css" href="/mixed/css/frame.css">
+        <link rel="stylesheet" type="text/css" href="/mixed/css/display.css">
     </head>
     <body>
         <div class="container-fluid">
@@ -45,6 +45,6 @@
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
-        <script src="/bg/js/display-window.js"></script>
+        <script src="/bg/js/search.js"></script>
     </body>
 </html>
