--- a/ext/fg/float.html
+++ b/ext/fg/float.html
@@ -5,7 +5,7 @@
         <title></title>
         <link rel="stylesheet" href="/mixed/lib/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" href="/mixed/lib/bootstrap/css/bootstrap-theme.min.css">
-        <link rel="stylesheet" href="/mixed/css/frame.css">
+        <link rel="stylesheet" href="/mixed/css/display.css">
         <style type="text/css">
             .entry, .note {
                 padding-left: 10px;
@@ -30,14 +30,14 @@
             </div>
         </div>
 
-        <script src="/fg/js/api.js"></script>
-        <script src="/fg/js/dictionary.js"></script>
-        <script src="/fg/js/util.js"></script>
-        <script src="/mixed/js/audio.js"></script>
-        <script src="/mixed/js/display.js"></script>
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/wanakana.min.js"></script>
 
-        <script src="/fg/js/display-frame.js"></script>
+        <script src="/fg/js/api.js"></script>
+        <script src="/fg/js/util.js"></script>
+        <script src="/mixed/js/audio.js"></script>
+        <script src="/mixed/js/display.js"></script>
+
+        <script src="/fg/js/float.js"></script>
     </body>
 </html>
