lots of fixes to backend

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -276,8 +276,7 @@
         <script src="/mixed/lib/bootstrap/js/bootstrap.min.js"></script>
         <script src="/mixed/lib/handlebars.min.js"></script>
 
-        <script src="/bg/js/anki-connect.js"></script>
-        <script src="/bg/js/anki-null.js"></script>
+        <script src="/bg/js/anki.js"></script>
         <script src="/bg/js/api.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
