--- a/ext/bg/context.html
+++ b/ext/bg/context.html
@@ -30,13 +30,10 @@
 
         <script src="/mixed/lib/jquery.min.js"></script>
         <script src="/mixed/lib/bootstrap-toggle/bootstrap-toggle.min.js"></script>
-        <script src="/mixed/lib/handlebars.min.js"></script>
 
         <script src="/bg/js/api.js"></script>
-        <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/options.js"></script>
-        <script src="/mixed/js/japanese.js"></script>
-        <script src="/mixed/js/request.js"></script>
+        <script src="/bg/js/util.js"></script>
 
         <script src="/bg/js/context.js"></script>
     </body>
