--- a/ext/bg/legal.html
+++ b/ext/bg/legal.html
@@ -10,7 +10,7 @@
         <div class="container-fluid">
             <h3>Yomichan License</h3>
 <pre>
-Copyright (C) 2016  Alex Yatskov
+Copyright (C) 2016-2017  Alex Yatskov
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
