--- a/ext/bg/search.html
+++ b/ext/bg/search.html
@@ -37,11 +37,11 @@
         <script src="/mixed/lib/wanakana.min.js"></script>
 
         <script src="/bg/js/api.js"></script>
+        <script src="/bg/js/audio.js"></script>
         <script src="/bg/js/dictionary.js"></script>
         <script src="/bg/js/handlebars.js"></script>
         <script src="/bg/js/templates.js"></script>
         <script src="/bg/js/util.js"></script>
-        <script src="/mixed/js/audio.js"></script>
         <script src="/mixed/js/display.js"></script>
         <script src="/mixed/js/japanese.js"></script>
 
