--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -48,7 +48,7 @@
                         <option value="disabled">Disabled</option>
                         <option value="jpod101">JapanesePod101</option>
                         <option value="jpod101-alternate">JapanesePod101 (alternate)</option>
-                        <option value="jisho">Jisho</option>
+                        <option value="jisho">Jisho.org</option>
                     </select>
                 </div>
 
