add sandbox stub

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -24,5 +24,7 @@
         <script src="/mixed/js/japanese.js"></script>
 
         <script src="/bg/js/backend.js"></script>
+
+        <iframe src="/sb/sandbox.html"></iframe>
     </body>
 </html>
