work on sandbox

--- a/ext/bg/background.html
+++ b/ext/bg/background.html
@@ -25,6 +25,6 @@
 
         <script src="/bg/js/backend.js"></script>
 
-        <iframe src="/sb/sandbox.html"></iframe>
+        <iframe src="/sb/sandbox.html" id="sandbox"></iframe>
     </body>
 </html>
