--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -22,7 +22,7 @@
             #field-templates {
                 font-family: monospace;
                 overflow-x: hidden;
-                white-space: nowrap;
+                white-space: pre;
             }
         </style>
     </head>
@@ -195,11 +195,6 @@
                         <input type="text" id="interface-server" class="form-control">
                     </div>
 
-                    <div class="form-group options-advanced">
-                        <label for="field-templates">Field templates (<a href="#" id="field-templates-reset">reset to defaults</a>)</label>
-                        <textarea class="form-control" rows="10" id="field-templates"></textarea>
-                    </div>
-
                     <div id="anki-format">
                         <p class="help-block">
                             Specify the information you would like included in your flashcards in the field editor below.
@@ -252,27 +247,37 @@
                                 </table>
                             </div>
                         </div>
+
+                        <div class="options-advanced">
+                            <p class="help-block">
+                                Fields are formatted using the <a href="http://handlebarsjs.com/">Handlebars.js</a> template rendering
+                                engine. Advanced users can modify these templates for ultimate control of what information gets included in
+                                their Anki cards. If you encounter problems with your changes you can always <a href="#" id="field-templates-reset">reset to default</a>
+                                template settings.
+                            </p>
+                            <textarea class="form-control" rows="10" id="field-templates"></textarea>
+                        </div>
                     </div>
                 </div>
-
-                <div>
-                    <h3>Support Development</h3>
-
-                    <p class="help-block">
-                        Yomichan is provided to you <em>completely free</em> of charge. Unlike numerous other "free" services, you are not
-                        shown ads, pestered with "offers", or have your browser usage information analyzed and sold to third parties.
-                    </p>
-                    <p class="help-block">
-                        If you find Yomichan useful, please consider making a small donation as a way to show your appreciation for the
-                        countless hours that I have devoted to this extension.
-                    </p>
-                    <p>
-                        <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN" target="_blank"><img src="/bg/img/paypal.gif" alt></a>
-                    </p>
-                </div>
-
-                <pre id="debug"></pre>
             </div>
+
+            <div>
+                <h3>Support Development</h3>
+
+                <p class="help-block">
+                    Yomichan is provided to you <em>completely free</em> of charge. Unlike numerous other "free" services, you are not
+                    shown ads, pestered with "offers", or have your browser usage information analyzed and sold to third parties.
+                </p>
+                <p class="help-block">
+                    If you find Yomichan useful, please consider making a small donation as a way to show your appreciation for the
+                    countless hours that I have devoted to this extension.
+                </p>
+                <p>
+                    <a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=4DBTN9A3CUAFN" target="_blank"><img src="/bg/img/paypal.gif" alt></a>
+                </p>
+            </div>
+
+            <pre id="debug"></pre>
 
             <div class="pull-right">
                 <small><a href="https://foosoft.net/projects/yomichan/" target="_blank">Homepage</a> &bull; <a href="legal.html">Legal</a></small>
