--- a/tmpl/kanji.html
+++ b/tmpl/kanji.html
@@ -19,9 +19,7 @@
         {{/each}}
     </div>
 
-    <br>
-
-    <table class="table table-condensed">
+    <table class="table table-condensed glyph-data">
         <tr>
             <th>Readings</th>
             <th>Glossary</th>
