add option to automatically hide search results (fixes #71)

--- a/ext/bg/settings.html
+++ b/ext/bg/settings.html
@@ -96,6 +96,10 @@
                     <label><input type="checkbox" id="search-alphanumeric"> Search alphanumeric text</label>
                 </div>
 
+                <div class="checkbox">
+                    <label><input type="checkbox" id="auto-hide-results"> Automatically hide results</label>
+                </div>
+
                 <div class="form-group options-advanced">
                     <label for="scan-delay">Scan delay (in milliseconds)</label>
                     <input type="number" min="1" id="scan-delay" class="form-control">
